# seis

./: Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
python/seis/: __init__.py  lib.py  test_lib.py
python/tests/: test_library.py
src/: gather.rs  lib.rs
