[package]
name = "seis"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seis"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3" }


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]